# CS232

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.html  pyproject.toml  script.js  setting.css  setting.html  setting.js  signup.html  sql_app.db  style.css
app/: main.py
app/api/v1/: auth.py  settings.py  tasks.py
app/core/: crud.py
app/database/: database.py
app/model/: models.py
app/schemas/: schemas.py
back/: Dockerfile  README.md  pyproject.toml
back/app/: main.py
back/app/api/v1/: auth.py  settings.py  tasks.py
back/app/core/: crud.py
back/app/database/: database.py
back/app/model/: models.py
back/app/schemas/: schemas.py
back/database/: README.md  schema.sql  test.sql
database/: README.md  schema.sql  test.sql
front/: README.md  main.html  noti.html  script.js  setting.css  setting.html  setting.js  signup.html  style.css
